<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="spinnerAdapter"
            type="android.widget.ArrayAdapter" />

        <variable
            name="viewmodel"
            type="com.gsoor.intro.ui.chooseacount.ChooseAccountViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_onboarding"
        tools:context=".intro.ui.intro.OnboardingFragment">

        <ImageView
            android:id="@+id/Img_Onbording"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginEnd="@dimen/_55sdp"
            android:layout_marginStart="@dimen/_55sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/logo"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/T_OnBoarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:textSize="@dimen/_18sdp"
            android:text= "@string/welcome"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_below="@+id/Img_Onbording"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/loginuser"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_below="@+id/T_OnBoarding"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/_18sdp"
            android:id="@+id/Title"
            />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/Title"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:onClick="onClickLogin"
            android:textColor="@color/green"
            android:textSize="@dimen/_12sdp"
            app:backgroundTint="@color/white"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegister"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:elevation="0dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_below="@+id/buttonLogin"
            android:text="@string/register"
            android:textAllCaps="false"
            android:onClick="btnRegister"
            android:textColor="@color/green"
            android:textSize="@dimen/_12sdp"
            app:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



    </RelativeLayout>
</layout>