<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gsoor.admin.ui.home.HomeAdminViewModel" />


    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/dark_green"
                android:alpha=".3"
                android:layout_height="@dimen/_120sdp"/>

            <ImageView
                android:id="@+id/Img_logo"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/logo"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_centerHorizontal="true" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/Img_logo"
                android:layout_marginTop="@dimen/_25sdp"
                android:id="@+id/Card"
                app:cardCornerRadius="@dimen/_20sdp"
                app:cardElevation="@dimen/_5sdp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:id="@+id/TPermission"
                        android:text="@string/add_package"
                        android:textColor="@color/green"
                        android:textSize="@dimen/_18sdp"
                        />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>



            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_below="@+id/Card"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/linear"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/role"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_30sdp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:inputType="text"
                            android:layout_marginBottom="-8dp"
                            android:id="@+id/E_PackageName"
                            android:background="@drawable/bc_edittextwhite"
                            android:singleLine="true"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:hint="@string/packageName"
                            android:textColor="#868686"
                            android:textSize="@dimen/_12sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/countOfServices"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:inputType="number"
                            android:layout_marginBottom="-8dp"
                            android:id="@+id/E_CountofServic"
                            android:background="@drawable/bc_edittextwhite"
                            android:singleLine="true"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:hint="@string/countOfServices"
                            android:textColor="#868686"
                            android:textSize="@dimen/_12sdp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <RadioGroup
                        android:id="@+id/radios"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radiofree"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/black"
                            android:checked="true"
                            android:text="@string/free"
                            android:textColor="@color/black" />

                        <RadioButton
                            android:id="@+id/radiopaid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_40sdp"
                            android:buttonTint="@color/black"
                            android:text="@string/paid"
                            android:textColor="@color/black" />


                    </RadioGroup>

                    <RatingBar
                        android:id="@+id/RatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:numStars="5"
                        android:layout_gravity="center"
                        android:progressTint="#FFC107"
                        android:stepSize="1" />



                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonSave"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        android:layout_below="@+id/Rela11"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:text="@string/save"
                        android:backgroundTint="@color/green"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp"
                        app:backgroundTint="@color/white"
                        app:cornerRadius="20dp" />





                </LinearLayout>

            </androidx.core.widget.NestedScrollView>



        </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>