<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.gsoor.data.remote.model.PackagesResponse.Data" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardElevation="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/packageName"
                android:id="@+id/Role"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/red"
                android:text="@={model.packageName}"
                android:layout_toEndOf="@+id/countOfServices"
                android:layout_marginStart="@dimen/_20sdp" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/countOfServices"
                android:id="@+id/countOfServices"
                android:layout_below="@+id/Role"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_10sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/red"
                android:text="@={model.countOfServices}"
                android:layout_below="@+id/Role"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_toEndOf="@+id/countOfServices"
                android:layout_marginStart="@dimen/_20sdp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/type_ofservice"
                android:id="@+id/type_ofservice"
                android:layout_below="@+id/countOfServices"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_10sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:layout_below="@+id/countOfServices"
                android:layout_marginTop="@dimen/_8sdp"
                android:id="@+id/T_Typeofservice"
                android:layout_toEndOf="@+id/countOfServices"
                android:layout_marginStart="@dimen/_20sdp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/countOfStars"
                android:id="@+id/countOfStars"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_below="@+id/type_ofservice"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_10sdp" />



            <RatingBar
                android:id="@+id/RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_below="@+id/type_ofservice"
                android:theme="@style/AppTheme.AppBarOverlay"
                style="?android:attr/ratingBarStyleSmall"
                android:numStars="5"
                android:layout_toEndOf="@+id/countOfServices"
                android:layout_marginStart="@dimen/_20sdp"
                app:review="@{model.countOfStars}"
                android:progressTint="#FFC107"
                android:stepSize="0.5" />

            <ImageView
                android:id="@+id/img_delete"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/img_delete" />

            <ImageView
                android:id="@+id/img_edit"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_toStartOf="@+id/img_delete"
                android:src="@drawable/ic_edit" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</layout>